2011-05-25  Rob Buis  <rbuis@rim.com>

Reviewed by Eric Seidel.

        WebKit does not handle missing filter elements correctly
        https://bugs.webkit.org/show_bug.cgi?id=12569

        Updated improved pixel test result and add new SVG1.1 SE test and results.

        * platform/mac/svg/W3C-SVG-1.1-SE/filters-felem-01-b-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/filters-felem-01-b-expected.txt: Added.
        * platform/mac/svg/W3C-SVG-1.1/filters-felem-01-b-expected.png:
        * svg/W3C-SVG-1.1-SE/filters-felem-01-b.svg: Added.
2011-05-25  Rob Buis  <rbuis@rim.com>

        Reviewed by Eric Seidel.
        New test rubber-stamped by Dirk Schulze.

        WebKit does not handle missing filter elements correctly
        https://bugs.webkit.org/show_bug.cgi?id=12569

        Do not render elements that reference non-existant filters.

        Test: svg/W3C-SVG-1.1-SE/filters-felem-01-b.svg

        * rendering/svg/SVGRenderSupport.cpp:
        (WebCore::SVGRenderSupport::prepareToRenderSVGContent):


Canonical link: https://commits.webkit.org/76861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87310 268f45cc-cd09-0410-ab3c-d52691b4dbfc